<resources>
    <string name="app_name">Guardian</string>
    <string name="signInText"><![CDATA[تا به حال از گاردین استفاده نکرده ام، <i></b/>ثبت نام<b><i>]]></string>

    <string name="access_token" translatable="false">pk.eyJ1Ijoic2luYWVsYWhpbWFuZXNoIiwiYSI6ImNrOTVnbzY3eTA0engzbHEybXY4d2lyM3UifQ.CXS09Kz47wHmxhMMp5trWQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <string name="email"><a href="mailto:support@guardianapp.ir">ایمیل پشتیانی</a></string>
    <string name="website"><a href="http://guardianapp.ir">وبسایت گاردین</a></string>

    <string name="activity_info_description">تصادفات رانندگی یکی از علل مهم مرگ و میر در سرتاسر جهان و به ویژه در ایران می باشد؛ به صورتی که می توان از آن به عنوان دومین علت مرگ و میر در ایران یاد کرد.
    <b><i>گاردیَن</i></b> با بررسی عوامل موثر بر رانندگی سالم شما از جمله؛ میزان خواب، ساعت شبانه روز، سرعت خودرو، میزان رانندگی بدون توقف، نوع جاده، ترافیک مسیر، آب و هوا، درنظر گرفتن محدوده ی ۳۰ کیلومتری شهرهای بزرگ به صورت هوشمند
    با ارائه ی راهکار های مناسب به اینکه شما سالم تر رانندگی کنید، کمک کند!</string>

    <string name="activity_info_title">درباره ی گاردین</string>
    <string name="activity_info_subtitle">گاردیَن چیست؟</string>

    <string name="activity_account_title">حساب کاربری من</string>
    <string name="activity_account_subtitle1">تغییر رمز عبور</string>
    <string name="activity_account_subtitle2">رمز عبور جدید را وارد نمایید.</string>
    <string name="activity_account_subtitle3">شماره تلفن همراه</string>
    <string name="activity_account_editDataButton">ویرایش اطلاعات</string>

    <string name="activity_seatBelt_description">در ابتدا لطفا کمربند ایمنی\n خود را ببندید!</string>
    <string name="activity_selectNav_startTrip">شروع سفر</string>
    <string name="activity_selectNav_description">لطفا مقصد سفر خود را انتخاب کنید.</string>
    <string name="usernameText">نام کاربری</string>
    <string name="main_percentDescription">درصد رانندگی سالم</string>
    <string name="signIn_subtitle1">نام کاربری</string>
    <string name="signIn_subtitle2">رمز عبور</string>
    <string name="signIn_button">ورود</string>
    <string name="signIn_secondButton">هنوز ثبت نام نکرده ام، ثبت نام</string>
    <string name="signUp_subtitle1">نام کاربری</string>
    <string name="signUp_subtitle2">رمز عبور</string>
    <string name="singUp_subtitle3">شماره تلفن همراه</string>
    <string name="signUp_button">ثبت نام</string>
    <string name="signUp_secondButton">قبلا از گاردین استفاده کرده ام، ورود</string>
    <string name="activity_support_title">پشتیبانی</string>
    <string name="activity_support_subtitle1">وبسایت</string>
    <string name="activity_support_subtitle2">ایمیل</string>
    <string name="activity_setting_title">تنظیمات</string>
    <string name="dark_mode_switch_text">حالت تاریک نقشه در مسیریابی</string>
    <string name="off_text">خاموش</string>
    <string name="on_text">روشن</string>
    <string name="wait_text">لطفا چند لحظه منتظر بمانید.</string>
    <string name="activity_account_subtitle0">اطلاعات حساب کاربری</string>

    <string name="rain">باران</string>
    <string name="snow">برف</string>
    <string name="clear">صاف</string>
    <string name="drizzle">باران ملایم</string>
    <string name="thunderstorm">رعد و برق</string>
    <string name="dust">شنی</string>
    <string name="sand">شنی</string>
    <string name="ash">خاکستر</string>
    <string name="cloud">ابری</string>
    <string name="mist">مه</string>
    <string name="smoke">دود</string>
    <string name="haze">مه</string>
    <string name="fog">مه</string>
    <string name="tornado">طوفانی</string>
    <string name="squall">باد شدید</string>



    <string name="showcase_restbutton">با استفاده از این دکمه می توانید نزدیک ترین مجتمع رفاهی یا پمپ بنزین به خود را در هر لحظه مشاهده کنید!</string>
    <string name="showcase_alertmessagetext">این قسمت در هر لحظه به شما نشان می دهد که وضعیت رانندگی شما چگونه است و کمک می کند که سفری ایمن تر داشته باشید!
و گاردین به صورت صوتی این موارد را به شما گزارش خواهد داد.</string>
    <string name="showcase_drivingbackground">در این قسمت 《درصد رانندگی سالم》 شما نشان داده می شود؛ که نشان می دهد در هر لحظه چقدر شرایط شما برای رانندگی مناسب است!</string>
    <string name="showcase_statistics">در هر لحظه میتوانید سرعت رانندگی خود، آب و هوای مسیر و اینکه چند دقیقه است که بدون توقف رانندگی می کنید را ملاحظه کنید.</string>
    <string name="showcase_menubutton">می توانید منوی برنامه را از این قسمت مشاهده کنید.</string>
</resources>
