<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:layout_weight="1"
    android:background="@color/appThemeColor"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.22"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo_SignUp"
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:src="@drawable/logo_white"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />
<!--            android:visibility="gone"-->


<!--        <pl.droidsonroids.gif.GifImageView-->
<!--            android:id="@+id/logoGif"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:src="@drawable/logo_bounce"-->
<!--            android:background="@color/appThemeColor" />-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.78"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:background="#c3e99e">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/signup" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp_subtitle1"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/iran_sans"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/iran_sans"
                android:gravity="center_horizontal"
                android:textAlignment="center" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp_subtitle2"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/iran_sans"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/iran_sans"
                android:gravity="center_horizontal"
                android:textAlignment="center" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/singUp_subtitle3"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/iran_sans"/>

            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/iran_sans"
                android:gravity="center_horizontal"
                android:textAlignment="center" />


            <Button
                android:id="@+id/SignUpButt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="34dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/button_background"
                android:text="@string/signUp_button"
                android:textColor="@color/inputBoxColor"
                android:fontFamily="@font/iran_sans"
                android:textSize="16sp"/>
            <Button
                android:id="@+id/signUpIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#c3e99e"
                android:text="@string/signUp_secondButton"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:fontFamily="@font/iran_sans"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="#606060"/>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>