<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccount"
    android:background="@color/appThemeColor"
    android:layout_weight="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.27"
        android:orientation="vertical">
        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:src="@drawable/logo_white"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.78"
        android:background="#c3e99e"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#F5F5F5">

            <ImageButton
                android:background="@drawable/back"
                android:layout_height="20dp"
                android:layout_width="16dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/backButton">

            </ImageButton>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:text="@string/activity_account_title"
                android:textAlignment="center"
                android:padding="6dp"
                android:textSize="16dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/ebtekar"
                android:gravity="center_horizontal" >

            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_account_subtitle0"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/iran_sans"
            android:layout_marginTop="15dp"
            android:textColor="#B4000000"/>

        <View
            android:layout_height="0.7dp"
            android:layout_width="150dp"
            android:background="#7E7E7E"
            android:layout_gravity="center"
            android:layout_marginRight="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="4dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:padding="10dp">

            <TextView
                android:id="@+id/username_accountField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:fontFamily="@font/iran_sans"
                android:gravity="right"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:paddingRight="72dp"/>

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/iran_sans"
                android:gravity="right"
                android:text="نام کاربری:"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:padding="10dp">

            <TextView
                android:id="@+id/password_accountField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:fontFamily="@font/iran_sans"
                android:gravity="right"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:paddingRight="86dp"/>

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/iran_sans"
                android:gravity="right"
                android:text="رمز عبور:"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:padding="10dp">

            <TextView
                android:id="@+id/phoneNum_accountField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:fontFamily="@font/iran_sans"
                android:gravity="right"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:paddingRight="30dp"/>

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/iran_sans"
                android:gravity="right"
                android:text="شماره تلفن همراه:"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/logoutButton"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@color/colorNegativeError"
            android:alpha="0.65"
            android:text="خروج از حساب کاربری"
            android:textColor="@color/inputBoxColor"
            android:fontFamily="@font/iran_sans"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_account_subtitle1"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/iran_sans"
            android:layout_marginTop="25dp"
            android:textColor="#B4000000"/>

        <View
            android:layout_height="0.7dp"
            android:layout_width="150dp"
            android:background="#7E7E7E"
            android:layout_gravity="center"
            android:layout_marginRight="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_account_subtitle2"
            android:textSize="15sp"
            android:gravity="center"
            android:fontFamily="@font/iran_sans"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center_horizontal"
            android:hint="password"
            android:paddingTop="5dp"
            android:textAlignment="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/messageTextAccount"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#25BD25"
            android:textSize="12sp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:fontFamily="@font/iran_sans"/>

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/button_background"
            android:text="@string/activity_account_editDataButton"
            android:textColor="@color/inputBoxColor"
            android:fontFamily="@font/iran_sans"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>